--- a/package.json
+++ b/package.json
@@ -8,14 +8,18 @@
     "dev": "nodemon dist/index.js",
     "start": "node dist/index.js",
     "start2": "ts-node src/index.ts",
-    "dev2": "nodemon --exec ts-node src/index.ts"
+    "dev2": "nodemon --exec ts-node src/index.ts",
+    "create:migration": "mikro-orm migration:create"
   },
   "keywords": [],
   "author": "Sahil Kargutkar",
   "license": "MIT",
   "devDependencies": {
+    "@types/connect-redis": "^0.0.18",
     "@types/express": "^4.17.13",
+    "@types/express-session": "^1.17.4",
     "@types/node": "^17.0.21",
+    "@types/redis": "^4.0.11",
     "nodemon": "^2.0.15",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.2"
@@ -26,11 +30,16 @@
     "@mikro-orm/migrations": "^5.0.5",
     "@mikro-orm/postgresql": "^5.0.5",
     "apollo-server-express": "^3.6.3",
+    "argon2": "^0.28.5",
+    "connect-redis": "^6.1.3",
+    "cors": "^2.8.5",
     "dot-env": "^0.0.1",
     "dotenv-safe": "^8.2.0",
     "express": "^4.17.3",
+    "express-session": "^1.17.2",
     "graphql": "^15.8.0",
     "pg": "^8.7.3",
+    "redis": "^4.0.4",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.1.1"
   },
