--- a/reddit-client/package.json
+++ b/reddit-client/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/react": "^1.8.6",
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
+    "@urql/exchange-graphcache": "^4.3.6",
     "formik": "^2.2.9",
     "framer-motion": "^6.2.8",
     "graphql": "^16.3.0",
