--- a/reddit-client/package.json
+++ b/reddit-client/package.json
@@ -18,8 +18,10 @@
     "framer-motion": "^6.2.8",
     "graphql": "^16.3.0",
     "next": "12.1.1",
+    "next-urql": "^3.3.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-is": "^18.0.0",
     "urql": "^2.2.0"
   },
   "devDependencies": {
