--- a/reddit-server/package.json
+++ b/reddit-server/package.json
@@ -20,6 +20,7 @@
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.4",
     "@types/node": "^17.0.21",
+    "@types/nodemailer": "^6.4.4",
     "@types/redis": "^4.0.11",
     "nodemon": "^2.0.15",
     "ts-node": "^10.7.0",
@@ -39,6 +40,7 @@
     "express": "^4.17.3",
     "express-session": "^1.17.2",
     "graphql": "^15.8.0",
+    "nodemailer": "^6.7.3",
     "pg": "^8.7.3",
     "redis": "^4.0.4",
     "reflect-metadata": "^0.1.13",
