--- a/reddit-server/package.json
+++ b/reddit-server/package.json
@@ -44,9 +44,11 @@
     "graphql": "^15.8.0",
     "ioredis": "^5.0.4",
     "nodemailer": "^6.7.3",
+    "nvm": "^0.0.4",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.1.1",
+    "typeorm": "^0.3.6",
     "uuid": "^8.3.2"
   },
   "mikro-orm": {
