--- a/reddit-server/package.json
+++ b/reddit-server/package.json
@@ -8,8 +8,7 @@
     "dev": "nodemon dist/index.js",
     "start": "node dist/index.js",
     "start2": "ts-node src/index.ts",
-    "dev2": "nodemon --exec ts-node src/index.ts",
-    "create:migration": "mikro-orm migration:create"
+    "dev2": "nodemon --exec ts-node src/index.ts"
   },
   "keywords": [],
   "author": "Sahil Kargutkar",
@@ -29,10 +28,6 @@
     "typescript": "^4.6.2"
   },
   "dependencies": {
-    "@mikro-orm/cli": "^5.0.5",
-    "@mikro-orm/core": "^5.0.5",
-    "@mikro-orm/migrations": "^5.0.5",
-    "@mikro-orm/postgresql": "^5.0.5",
     "apollo-server-express": "^3.6.3",
     "argon2": "^0.28.5",
     "connect-redis": "^6.1.3",
